tests/test_files/error_type_mismatch.stderr
error: Mismatched types
- error_type_mismatch:2:2
2 |   y
  |   ^
